# TimeOptimalTrajectory

./: CMakeLists.txt
include/TimeOptimalTrajectory/: Path.h  Trajectory.h
src/: Path.cpp  Trajectory.cpp
tests/: Example.cpp  ExamplePlot.cpp
utils/matlab/: maxVelocity.txt  trajectory.txt
utils/python/: PyPlot.py
